added an overflow

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <button id="btn0" class="but" onclick="div10()">pink</button3>
         </div>
     </div>
-    <input type="text" value="Enter hex color">
+    <!-- <input type="text" value="Enter hex color"> -->
 
     <script src="index.js">
-        input.value
+        // input.value
     </script>
 </body> 
 </html>
